<?xml version="1.0"?>
<package format="2">
  <name>hb_stack</name>
  <version>0.0.0</version>
  <description>The hb_stack metapackage</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sriniketh@todo.todo">sutd</maintainer>

  <license>TODO</license>


  
  <buildtool_depend>catkin</buildtool_depend>
  
  	<exec_depend>hb_base</exec_depend>
    <exec_depend>hb_launchers</exec_depend>
    <exec_depend>hb_config</exec_depend>

  
  <export>
   	<metapackage/>

  </export>
</package>
